Modernize BeanShell runtime utility APIs